syntax = "proto3";

package gs.service.user;

import "konekko.me/gosion/commons/dto/commons.proto";

service OAuth {

    rpc Login (OAuthLoginRequest) returns (OAuthLoginResponse);

    rpc bindOAuth (BindOAuthRequest) returns (gs.commons.dto.Status);
}

message BindOAuthRequest {
    string openId = 1;

}

message OAuthLoginRequest {

}

message OAuthLoginResponse {

}